--- a/docs/csharp/language-reference/compiler-messages/cs0229.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0229.md
@@ -10,22 +10,22 @@ ms.assetid: f1ff7e91-1243-4d36-b792-26ba69186f8f
 caps.latest.revision: "9"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 9f7e424cb7fb5af8e8561b6ff794c1c49135a3d1
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: c0287ec153cb8a2ea5bddabbf90fc2df9e17f66e
+ms.sourcegitcommit: 5177d6ae2e9baf026f07ee0631556700a5a193f7
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 11/28/2017
 ---
-# <a name="compiler-error-cs0229"></a><span data-ttu-id="8f47e-102">コンパイラ エラー CS0229</span><span class="sxs-lookup"><span data-stu-id="8f47e-102">Compiler Error CS0229</span></span>
-<span data-ttu-id="8f47e-103">'member1' と 'member2' 間があいまいです</span><span class="sxs-lookup"><span data-stu-id="8f47e-103">Ambiguity between 'member1' and 'member2'</span></span>  
+# <a name="compiler-error-cs0229"></a><span data-ttu-id="84240-102">コンパイラ エラー CS0229</span><span class="sxs-lookup"><span data-stu-id="84240-102">Compiler Error CS0229</span></span>
+<span data-ttu-id="84240-103">'member1' と 'member2' 間があいまいです</span><span class="sxs-lookup"><span data-stu-id="84240-103">Ambiguity between 'member1' and 'member2'</span></span>  
   
- <span data-ttu-id="8f47e-104">異なるインターフェイスのメンバーが同じ名前です。</span><span class="sxs-lookup"><span data-stu-id="8f47e-104">Members of different interfaces have the same name.</span></span> <span data-ttu-id="8f47e-105">同じ名前を維持するには、名前を修飾する必要があります。</span><span class="sxs-lookup"><span data-stu-id="8f47e-105">If you want to keep the same names, you must qualify the names.</span></span> <span data-ttu-id="8f47e-106">詳細については、「[インターフェイス](../../../csharp/programming-guide/interfaces/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="8f47e-106">For more information, see [Interfaces](../../../csharp/programming-guide/interfaces/index.md).</span></span>  
+ <span data-ttu-id="84240-104">異なるインターフェイスのメンバーが同じ名前です。</span><span class="sxs-lookup"><span data-stu-id="84240-104">Members of different interfaces have the same name.</span></span> <span data-ttu-id="84240-105">同じ名前を維持するには、名前を修飾する必要があります。</span><span class="sxs-lookup"><span data-stu-id="84240-105">If you want to keep the same names, you must qualify the names.</span></span> <span data-ttu-id="84240-106">詳細については、「[インターフェイス](../../../csharp/programming-guide/interfaces/index.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="84240-106">For more information, see [Interfaces](../../../csharp/programming-guide/interfaces/index.md).</span></span>  
   
 > [!NOTE]
->  <span data-ttu-id="8f47e-107">場合によっては、[using](../../../csharp/language-reference/keywords/using-directive.md) エイリアスで明示的なプレフィックスを識別子に指定することで、このあいまいさを解決することができます。</span><span class="sxs-lookup"><span data-stu-id="8f47e-107">In some cases, this ambiguity can be resolved by providing an explicit prefix to the identifier via a [using](../../../csharp/language-reference/keywords/using-directive.md) alias.</span></span>  
+>  <span data-ttu-id="84240-107">場合によっては、[using](../../../csharp/language-reference/keywords/using-directive.md) エイリアスで明示的なプレフィックスを識別子に指定することで、このあいまいさを解決することができます。</span><span class="sxs-lookup"><span data-stu-id="84240-107">In some cases, this ambiguity can be resolved by providing an explicit prefix to the identifier via a [using](../../../csharp/language-reference/keywords/using-directive.md) alias.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="8f47e-108">例</span><span class="sxs-lookup"><span data-stu-id="8f47e-108">Example</span></span>  
- <span data-ttu-id="8f47e-109">次の例では CS0229 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="8f47e-109">The following example generates CS0229:</span></span>  
+## <a name="example"></a><span data-ttu-id="84240-108">例</span><span class="sxs-lookup"><span data-stu-id="84240-108">Example</span></span>  
+ <span data-ttu-id="84240-109">次の例では CS0229 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="84240-109">The following example generates CS0229:</span></span>  
   
 ```csharp  
 // CS0229.cs  
@@ -41,7 +41,7 @@ interface IList
     void Counter();  
 }  
   
-interface Icounter  
+interface ICounter  
 {  
     double Count  
     {  
@@ -50,7 +50,7 @@ interface Icounter
     }  
 }  
   
-interface IListCounter : IList , Icounter {}  
+interface IListCounter : IList , ICounter {}  
   
 class MyClass  
 {  
@@ -60,7 +60,7 @@ class MyClass
         // Try one of the following lines instead:  
         // ((IList)x).Count = 1;  
         // or  
-        // ((Icounter)x).Count = 1;  
+        // ((ICounter)x).Count = 1;  
     }  
   
     public static void Main() {}  
