--- a/docs/visual-basic/misc/bc30568.md
+++ b/docs/visual-basic/misc/bc30568.md
@@ -9,14 +9,13 @@ f1_keywords:
 - vbc30568
 helpviewer_keywords: BC30568
 ms.assetid: 5d81f73d-1ce1-42a0-8cf5-f564d6094617
-caps.latest.revision: "9"
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 056100de5d9ef9413814d50ffde2d2ba34622a62
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+author: rpetrusha
+ms.author: ronpet
+ms.openlocfilehash: 6a6fa072f48d5be79519707f20b3bcfa4e3e3a24
+ms.sourcegitcommit: 01ea3686e74ff05e4f6de3d8d46dc603d051ec00
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/13/2017
 ---
 # <a name="array-initializer-has-ltnumbergt-too-many-elements"></a>配列初期化子が&lt;数&gt;要素が多すぎます
 配列初期化子に含まれている要素が多すぎます。  
@@ -25,7 +24,18 @@ ms.lasthandoff: 10/18/2017
   
 ## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
+- ジャグ配列を作成する入れ子になった配列リテラルを使用している場合は、各サブ配列をかっこで囲みます。 たとえば、次のように、ジャグ配列定義がある場合。
+ 
+  ```vb
+  Dim jaggedValues =  {{1, 2}, {2, 3, 4}}
+  ```
+  変更することができます。
+
+  ```vb
+  Dim valuesjagged = {({1, 2}), ({2, 3, 4})}
+  ```    
+
 -   `ReDim` を使って配列のサイズを変更します。  
-  
+
 ## <a name="see-also"></a>関連項目  
  [Visual Basic における配列](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)
