--- a/docs/visual-basic/misc/bc30568.md
+++ b/docs/visual-basic/misc/bc30568.md
@@ -9,23 +9,33 @@ f1_keywords:
 - vbc30568
 helpviewer_keywords: BC30568
 ms.assetid: 5d81f73d-1ce1-42a0-8cf5-f564d6094617
-caps.latest.revision: "9"
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 056100de5d9ef9413814d50ffde2d2ba34622a62
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+author: rpetrusha
+ms.author: ronpet
+ms.openlocfilehash: 6a6fa072f48d5be79519707f20b3bcfa4e3e3a24
+ms.sourcegitcommit: 01ea3686e74ff05e4f6de3d8d46dc603d051ec00
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 12/13/2017
 ---
-# <a name="array-initializer-has-ltnumbergt-too-many-elements"></a><span data-ttu-id="c61fa-102">配列初期化子が&lt;数&gt;要素が多すぎます</span><span class="sxs-lookup"><span data-stu-id="c61fa-102">Array initializer has &lt;number&gt; too many elements</span></span>
-<span data-ttu-id="c61fa-103">配列初期化子に含まれている要素が多すぎます。</span><span class="sxs-lookup"><span data-stu-id="c61fa-103">Your array initializer contains too many elements.</span></span>  
+# <a name="array-initializer-has-ltnumbergt-too-many-elements"></a><span data-ttu-id="d373a-102">配列初期化子が&lt;数&gt;要素が多すぎます</span><span class="sxs-lookup"><span data-stu-id="d373a-102">Array initializer has &lt;number&gt; too many elements</span></span>
+<span data-ttu-id="d373a-103">配列初期化子に含まれている要素が多すぎます。</span><span class="sxs-lookup"><span data-stu-id="d373a-103">Your array initializer contains too many elements.</span></span>  
   
- <span data-ttu-id="c61fa-104">**エラー ID:** BC30568</span><span class="sxs-lookup"><span data-stu-id="c61fa-104">**Error ID:** BC30568</span></span>  
+ <span data-ttu-id="d373a-104">**エラー ID:** BC30568</span><span class="sxs-lookup"><span data-stu-id="d373a-104">**Error ID:** BC30568</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c61fa-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c61fa-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d373a-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d373a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="c61fa-106">`ReDim` を使って配列のサイズを変更します。</span><span class="sxs-lookup"><span data-stu-id="c61fa-106">Use `ReDim` to change the size of the array.</span></span>  
-  
-## <a name="see-also"></a><span data-ttu-id="c61fa-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="c61fa-107">See Also</span></span>  
- [<span data-ttu-id="c61fa-108">Visual Basic における配列</span><span class="sxs-lookup"><span data-stu-id="c61fa-108">Arrays in Visual Basic</span></span>](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)
+- <span data-ttu-id="d373a-106">ジャグ配列を作成する入れ子になった配列リテラルを使用している場合は、各サブ配列をかっこで囲みます。</span><span class="sxs-lookup"><span data-stu-id="d373a-106">If you are using nested array literals to create a jagged array, enclose each subarray in parentheses.</span></span> <span data-ttu-id="d373a-107">たとえば、次のように、ジャグ配列定義がある場合。</span><span class="sxs-lookup"><span data-stu-id="d373a-107">For example, if your jagged array definition is:</span></span>
+ 
+  ```vb
+  Dim jaggedValues =  {{1, 2}, {2, 3, 4}}
+  ```
+  <span data-ttu-id="d373a-108">変更することができます。</span><span class="sxs-lookup"><span data-stu-id="d373a-108">you can change it to:</span></span>
+
+  ```vb
+  Dim valuesjagged = {({1, 2}), ({2, 3, 4})}
+  ```    
+
+-   <span data-ttu-id="d373a-109">`ReDim` を使って配列のサイズを変更します。</span><span class="sxs-lookup"><span data-stu-id="d373a-109">Use `ReDim` to change the size of the array.</span></span>  
+
+## <a name="see-also"></a><span data-ttu-id="d373a-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="d373a-110">See Also</span></span>  
+ [<span data-ttu-id="d373a-111">Visual Basic における配列</span><span class="sxs-lookup"><span data-stu-id="d373a-111">Arrays in Visual Basic</span></span>](~/docs/visual-basic/programming-guide/language-features/arrays/index.md)
