--- a/docs/framework/migration-guide/runtime/4.6-4.7.md
+++ b/docs/framework/migration-guide/runtime/4.6-4.7.md
@@ -1,22 +1,23 @@
 ---
 title: ".NET Framework 4.6 から 4.7 への移行に関するランタイム変更"
-ms.date: 06/16/2017
+ms.date: 02/26/2018
 ms.prod: .net-framework
 ms.technology:
 - dotnet-clr
 - app-compat
 ms.topic: article
-caps.latest.revision: "1"
+caps.latest.revision: 
 ms.assetid: 45868e40-f7a9-4e66-b233-305688b1ed37
-author: conniey
+author: chlowell
 ms.author: ronpet
 manager: wpickett
-ms.workload: dotnet
-ms.openlocfilehash: fd4c1ee16a7e63d54273669ba0ec3e25e1af1fbb
-ms.sourcegitcommit: 16186c34a957fdd52e5db7294f291f7530ac9d24
+ms.workload:
+- dotnet
+ms.openlocfilehash: 8c7799fb1fe6bc2425af0549d7335e3c0419659b
+ms.sourcegitcommit: 655fd4f78741967f80c409cef98347fdcf77857d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/22/2017
+ms.lasthandoff: 02/28/2018
 ---
 # <a name="runtime-changes-for-migration-from-net-framework-46-to-47"></a>.NET Framework 4.6 から 4.7 への移行に関するランタイム変更
 
@@ -25,10 +26,6 @@ ms.lasthandoff: 12/22/2017
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
 .NET Framework 4.6 から 4.7 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。
-
-## <a name="core"></a>コア
-
-[!include[ETW event names cannot differ only by a "Start" or "Stop" suffix](~/includes/migration-guide/runtime/core/etw-event-names-cannot-differ-only-by-start-stop-suffix.md)]
 
 ## <a name="data"></a>データ
 
