--- a/docs/csharp/misc/cs0459.md
+++ b/docs/csharp/misc/cs0459.md
@@ -2,29 +2,32 @@
 title: "コンパイラ エラー CS0459"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-csharp
+ms.technology:
+- devlang-csharp
 ms.topic: article
-f1_keywords: CS0459
-helpviewer_keywords: CS0459
+f1_keywords:
+- CS0459
+helpviewer_keywords:
+- CS0459
 ms.assetid: 01b058dd-8d65-4e9d-9de1-d47f9488d22a
-caps.latest.revision: "8"
+caps.latest.revision: 
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: a9ea55bd2b4c94a4bd9f4e82c51d424d6810b535
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: f6a7e42a448fb27ee52ca35cfc998d790f205d23
+ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 03/15/2018
 ---
-# <a name="compiler-error-cs0459"></a><span data-ttu-id="39aab-102">コンパイラ エラー CS0459</span><span class="sxs-lookup"><span data-stu-id="39aab-102">Compiler Error CS0459</span></span>
-<span data-ttu-id="39aab-103">読み取り専用のローカル変数のアドレスを取得することはできません。</span><span class="sxs-lookup"><span data-stu-id="39aab-103">Cannot take the address of a read-only local variable</span></span>  
+# <a name="compiler-error-cs0459"></a><span data-ttu-id="24220-102">コンパイラ エラー CS0459</span><span class="sxs-lookup"><span data-stu-id="24220-102">Compiler Error CS0459</span></span>
+<span data-ttu-id="24220-103">読み取り専用のローカル変数のアドレスを取得することはできません。</span><span class="sxs-lookup"><span data-stu-id="24220-103">Cannot take the address of a read-only local variable</span></span>  
   
- <span data-ttu-id="39aab-104">読み取り専用のローカル変数 `foreach`、 `using`、および `fixed`を C# 言語で生成するには、3 つのシナリオがあります。</span><span class="sxs-lookup"><span data-stu-id="39aab-104">There are three common scenarios in the C# language that generate read-only local variables: `foreach`, `using`, and `fixed`.</span></span> <span data-ttu-id="39aab-105">これらそれぞれの場合において、読み取り専用のローカル変数に書き込んだり、そのアドレスを取得したりすることはできません。</span><span class="sxs-lookup"><span data-stu-id="39aab-105">In each of these cases, you are not allowed to write to the read-only local variable, or to take its address.</span></span> <span data-ttu-id="39aab-106">このエラーは、読み取り専用のローカル変数のアドレスを取得しようとしていることが、コンパイラで認識されたときに生成されます。</span><span class="sxs-lookup"><span data-stu-id="39aab-106">This error is generated when the compiler realizes you are trying to take the address of a read-only local variable.</span></span>  
+ <span data-ttu-id="24220-104">読み取り専用のローカル変数 `foreach`、 `using`、および `fixed`を C# 言語で生成するには、3 つのシナリオがあります。</span><span class="sxs-lookup"><span data-stu-id="24220-104">There are three common scenarios in the C# language that generate read-only local variables: `foreach`, `using`, and `fixed`.</span></span> <span data-ttu-id="24220-105">これらそれぞれの場合において、読み取り専用のローカル変数に書き込んだり、そのアドレスを取得したりすることはできません。</span><span class="sxs-lookup"><span data-stu-id="24220-105">In each of these cases, you are not allowed to write to the read-only local variable, or to take its address.</span></span> <span data-ttu-id="24220-106">このエラーは、読み取り専用のローカル変数のアドレスを取得しようとしていることが、コンパイラで認識されたときに生成されます。</span><span class="sxs-lookup"><span data-stu-id="24220-106">This error is generated when the compiler realizes you are trying to take the address of a read-only local variable.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="39aab-107">例</span><span class="sxs-lookup"><span data-stu-id="39aab-107">Example</span></span>  
- <span data-ttu-id="39aab-108">次の例では、 `foreach` ループおよび `fixed` ステートメント ブロック内に含まれる読み取り専用ローカル変数のアドレスの取得が試行されたときに、CS0459 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="39aab-108">The following example generates CS0459 when an attempt is made to take the address of a read-only local variable in a `foreach` loop and in a `fixed` statement block.</span></span>  
+## <a name="example"></a><span data-ttu-id="24220-107">例</span><span class="sxs-lookup"><span data-stu-id="24220-107">Example</span></span>  
+ <span data-ttu-id="24220-108">次の例では、 `foreach` ループおよび `fixed` ステートメント ブロック内に含まれる読み取り専用ローカル変数のアドレスの取得が試行されたときに、CS0459 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="24220-108">The following example generates CS0459 when an attempt is made to take the address of a read-only local variable in a `foreach` loop and in a `fixed` statement block.</span></span>  
   
-```  
+```csharp  
 // CS0459.cs  
 // compile with: /unsafe  
   
