--- a/includes/vs2010-md.md
+++ b/includes/vs2010-md.md
@@ -1,1 +1,1 @@
-<span data-ttu-id="9743e-101">Visual Studio 2010</span><span class="sxs-lookup"><span data-stu-id="9743e-101">Visual Studio 2010</span></span>
+<span data-ttu-id="c83c5-101">Visual Studio 2010</span><span class="sxs-lookup"><span data-stu-id="c83c5-101">Visual Studio 2010</span></span>
