--- a/docs/csharp/misc/cs1646.md
+++ b/docs/csharp/misc/cs1646.md
@@ -1,5 +1,5 @@
 ---
-title: "コンパイラ エラー CS1646"
+title: コンパイラ エラー CS1646
 ms.date: 07/20/2015
 ms.prod: .net
 ms.technology:
@@ -10,21 +10,21 @@ f1_keywords:
 helpviewer_keywords:
 - CS1646
 ms.assetid: 5e4b0f1e-8de3-42b0-bde6-9f882677a409
-caps.latest.revision: 
+caps.latest.revision: ''
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 65dd4def9b540d5462dfff9b3fef956f2fa4470c
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 03e03ffc31e0d401d960f74628521a298d8bae66
+ms.sourcegitcommit: 935d5267c44f9bce801468ef95f44572f1417e8c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 03/28/2018
 ---
-# <a name="compiler-error-cs1646"></a><span data-ttu-id="7e404-102">コンパイラ エラー CS1646</span><span class="sxs-lookup"><span data-stu-id="7e404-102">Compiler Error CS1646</span></span>
-<span data-ttu-id="7e404-103">verbatim 識別子の後にはキーワード、識別子、または文字列が必要です:@</span><span class="sxs-lookup"><span data-stu-id="7e404-103">Keyword, identifier, or string expected after verbatim specifier: @</span></span>  
+# <a name="compiler-error-cs1646"></a><span data-ttu-id="557ff-102">コンパイラ エラー CS1646</span><span class="sxs-lookup"><span data-stu-id="557ff-102">Compiler Error CS1646</span></span>
+<span data-ttu-id="557ff-103">キーワード、識別子、または文字列 verbatim 後が必要です。 \@</span><span class="sxs-lookup"><span data-stu-id="557ff-103">Keyword, identifier, or string expected after verbatim specifier: \@</span></span>  
   
- <span data-ttu-id="7e404-104">verbatim 識別子 '@' の使用法に関して文字列リテラルを確認します。</span><span class="sxs-lookup"><span data-stu-id="7e404-104">See string literals for the usage of the verbatim specifier '@'.</span></span> <span data-ttu-id="7e404-105">verbatim 識別子は、文字列、キーワード、または識別子の前にのみ使用できます。</span><span class="sxs-lookup"><span data-stu-id="7e404-105">The verbatim specifier is only allowed before a string, keyword or identifier.</span></span> <span data-ttu-id="7e404-106">このエラーを解決するには、正しくない場所にある @ 記号を削除するか、目的の文字列、キーワード、または識別子を追加します。</span><span class="sxs-lookup"><span data-stu-id="7e404-106">To resolve this error, remove the @ symbol from any inappropriate place or add the intended string, keyword or identifier.</span></span>  
+ <span data-ttu-id="557ff-104">Verbatim 識別子の使用法に関して文字列リテラルを参照してください。 '\@' です。</span><span class="sxs-lookup"><span data-stu-id="557ff-104">See string literals for the usage of the verbatim specifier '\@'.</span></span> <span data-ttu-id="557ff-105">verbatim 識別子は、文字列、キーワード、または識別子の前にのみ使用できます。</span><span class="sxs-lookup"><span data-stu-id="557ff-105">The verbatim specifier is only allowed before a string, keyword or identifier.</span></span> <span data-ttu-id="557ff-106">このエラーを解決するには、正しくない場所にある @ 記号を削除するか、目的の文字列、キーワード、または識別子を追加します。</span><span class="sxs-lookup"><span data-stu-id="557ff-106">To resolve this error, remove the @ symbol from any inappropriate place or add the intended string, keyword or identifier.</span></span>  
   
- <span data-ttu-id="7e404-107">次の例では CS1646 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="7e404-107">The following sample generates CS1646:</span></span>  
+ <span data-ttu-id="557ff-107">次の例では CS1646 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="557ff-107">The following sample generates CS1646:</span></span>  
   
 ```csharp  
 // CS1646  
